--- a/home-assistant/ingress.yml
+++ b/home-assistant/ingress.yml
@@ -7,7 +7,7 @@ metadata:
     kubernetes.io/ingress.class: traefik
 spec:
   rules:
-  - host: hass.home.odicro.com
+  - host: hass.igloo.odicro.com
     http:
       paths:
       - backend:
