--- a/now.json
+++ b/now.json
@@ -1,5 +1,6 @@
 {
   "version": 2,
   "name": "igloo",
-  "alias": ["igloo.odicro.com"]
+  "alias": ["igloo.odicro.com"],
+  "scope": "slipperypenguin"
 }
