revert dashboard path

--- a/traefik/traefik-dashboard.yml
+++ b/traefik/traefik-dashboard.yml
@@ -21,15 +21,9 @@ metadata:
     ingress.kubernetes.io/auth-secret: "traefik-dashboard-auth"
 spec:
   rules:
-  - http:
-    paths:
-    - path: /
-      backend:
-        serviceName: traefik-dashboard
-        servicePort: 8080
-  # - host: traefik.igloo.odicro.com
-  #   http:
-  #     paths:
-  #     - backend:
-  #         serviceName: traefik-dashboard
-  #         servicePort: 8080
+  - host: traefik.igloo.odicro.com
+    http:
+      paths:
+      - backend:
+          serviceName: traefik-dashboard
+          servicePort: 8080
