migrate to igloo ns ⛄

--- a/kubernetes-dashboard/k8s-role.yaml
+++ b/kubernetes-dashboard/k8s-role.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
     k8s-app: kubernetes-dashboard
   name: kubernetes-dashboard
-  namespace: kubernetes-dashboard
+  namespace: igloo
 rules:
   # Allow Dashboard to get, update and delete Dashboard exclusive secrets.
   - apiGroups: [""]
