--- a/kubernetes-dashboard/k8s-service-accounts.yaml
+++ b/kubernetes-dashboard/k8s-service-accounts.yaml
@@ -4,6 +4,6 @@ metadata:
   labels:
     k8s-app: kubernetes-dashboard
   name: kubernetes-dashboard
-  namespace: kubernetes-dashboard
+  namespace: igloo
 
 ---
