--- a/kubernetes-dashboard/k8s-role-binding.yaml
+++ b/kubernetes-dashboard/k8s-role-binding.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
     k8s-app: kubernetes-dashboard
   name: kubernetes-dashboard
-  namespace: kubernetes-dashboard
+  namespace: igloo
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
@@ -12,6 +12,6 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: kubernetes-dashboard
-    namespace: kubernetes-dashboard
+    namespace: igloo
 
 ---
