--- a/helm_charts/home-assistant/hass.yaml
+++ b/helm_charts/home-assistant/hass.yaml
@@ -7,9 +7,10 @@ spec:
   chart: stable/home-assistant
   version: 0.9.10
   targetNamespace: igloo
+  set:
+    configurator.enabled: "true"
   valuesContent: |-
     configurator:
-      enabled: true
       image:
         repository: causticlab/hass-configurator-docker
         tag: 0.3.6-arm
