--- a/helm_charts/traefik/traefik.yaml
+++ b/helm_charts/traefik/traefik.yaml
@@ -14,4 +14,5 @@ spec:
     kubernetes.ingressEndpoint.useDefaultPublishedService: "true"
     dashboard.enabled: "true"
     dashboard.domain: "traefik.lab.local"
+    # dashboard.domain: "traefik.igloo.odicro.com"
     # dashboard.auth.basic.test: "$apr1$H6uskkkW$IgXLP6ewTrSuBkTrqE8wj/"
