--- a/helm_charts/home-assistant/values.yaml
+++ b/helm_charts/home-assistant/values.yaml
@@ -1,7 +1,25 @@
+# Default values for home-assistant.
+# This is a YAML-formatted file.
+# Declare variables to be passed into your templates.
+
+image:
+  repository: homeassistant/home-assistant
+  tag: 0.104.0
+  pullPolicy: IfNotPresent
+  pullSecrets: []
+
+git:
+  enabled: false
+  image:
+    repository: causticlab/hass-configurator-docker
+    tag: 0.3.7-arm
+
 configurator:
   enabled: true
-  ## username for basic auth for accessing the configurator
-  username: brady
+  image:
+    repository: causticlab/hass-configurator-docker
+    tag: 0.3.7-arm
+  #username: brady
   ## password (sha256-hash) for basic auth for accessing the configurator
   ## For example "test" would be "{sha256}9f86d081884c7d659a2feaa0c55ad015a3bf4f1b2b0b822cd15d6c15b0f00a08"
-  password: {sha256}9f86d081884c7d659a2feaa0c55ad015a3bf4f1b2b0b822cd15d6c15b0f00a08
+  #password: {sha256}9f86d081884c7d659a2feaa0c55ad015a3bf4f1b2b0b822cd15d6c15b0f00a08
