--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -1,9 +1,10 @@
 name: lint
 
 on:
-  push:
-    branches:
-    - master
+  pull_request:
+    push:
+      branches:
+      - master
 
 jobs:
   lint-yaml:
@@ -35,3 +36,25 @@ jobs:
       with:
         path: "./hack"
         level: "error"
+
+  lint-ansible:
+    runs-on:
+    - ubuntu-latest
+    if: "!contains(github.event.head_commit.message, '[ci-skip]')"
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: 1
+
+    - name: Set up Python 3.X
+      uses: actions/setup-python@v2
+      with:
+          python-version: '3.x'
+
+    - name: Install test dependencies.
+      run: pip3 install ansible-lint ansible
+
+    - name: Lint Ansible
+      run: ansible-lint
+      with:
+          file_or_dir: "./ansible/k3s-ansible/"
