config: secret updates

--- a/kubernetes/apps/flux-system/addons/webhooks/github/secret.sops.yaml
+++ b/kubernetes/apps/flux-system/addons/webhooks/github/secret.sops.yaml
@@ -4,7 +4,7 @@ metadata:
     name: github-webhook-token-secret
     namespace: flux-system
 stringData:
-    token: ""
+    token: ENC[AES256_GCM,data:Zx8BfeoJ4EZ1gjA1IBG5MRlIeKCKP9Df,iv:u70vjFKzXFQGsERHc3JIwPG2aHL4fkXBuPisurFbI7U=,tag:JRC5AGcm/ZG2AXVVoZOsNg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -14,14 +14,14 @@ sops:
         - recipient: age143pqluyd0cecdvdmz6g5tqevq028syjw3asdlzukuqqm5yrvcdksacwtgg
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5NHNjWEtMaFoxTHBsNTJR
-            WDkveXZzck9qVHcyWE9jZVNuaG42ckhyL1c0CnIyaDBzckI5dmZKZWtFY0Y3d1ph
-            N0pLMjVxMHBicWpWdDVDMVUzUWp6ODgKLS0tIEp5OTNzeU90QTJMemZnWHhTZXVC
-            Y1JITjc0K3F3QXpYNnhGbzNydEtzdDgK/3OmyatbJIOo3hCvXr6f11OFvTezeeaa
-            YZeQBFjmrjaBh9qg/Mz+quWHGwnMDv6oRdyMEHL2UtoGinFr0qsCbA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtbzRxRER6cytscERYWnBz
+            YlNVRG4yRXFsV1ZXVzBsSVVjdk16d0E1aG40CkZ3VzNXT0FSYXUrZGpkY2JVM1Br
+            SFdYNEw1TThXdFJZMmwxaENmZDE0UVkKLS0tIDFPSFAvbzVQdmZ3TXQ2L2FHOGZP
+            Z2poYTVjWWlJUDRzbWNvbWd3VENsM0UKXj4pMGKn0C++gdhlyDdT5FQX944PeVpj
+            qg7vkwUFXgsx8GhRx/fKEccOZYF7ZGiSm7AhoxIvOuQLlAw9gwXIFA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-07-11T05:57:57Z"
-    mac: ENC[AES256_GCM,data:/pR+4noMmlrpHumND5SZyr5UwbLW2FK40NA4jiNa1DjzFe3GLgQ+rV3vZBFPvoZKoQ7C8y8zMKaHklAN9xZsmwwgB9MMbsUFYUZh/gYMkhAQ4ppYRjzKh8CW7PD1agzpnsziSxVD0tPWfOAxBez48WsFk00QGAejP9VlFnn3o7A=,iv:szrZk5Y0K+iPdQQtTdj6elR+A9BCwgqTkyMr3rQvglM=,tag:Xop5D6r9jitd7CEh93f1AQ==,type:str]
+    lastmodified: "2023-07-12T05:02:26Z"
+    mac: ENC[AES256_GCM,data:YfMSl4/IwJa9omk+Wfs9It37FFpFLugjGCmRmEdaauwmMuTAASlXIYb3c36ih9P0gkNiK/T4W5k/pU1iEV5V9JNpWkIpvFzFx71XjytfICYFA1qFXqdbg9LyxveMK6hvPw543mNfRDsHDB5LDgtbKUdVPaH2btLyf5CpU1kzneo=,iv:qBwkgGWQkmusftALwptcyfmr9lMVe/6lsIQAxJRIHog=,tag:aG/kjrr4aXpAnCVpxsQoYQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
