--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,9 +4,9 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:qtVZk5nbjUZsLZ+fj9U=,iv:hwZeZEdP8dDrEAhBDPct4Zpt+e88m6lakO8CqdtggS8=,tag:NSx5Du6cFuQCXlWukeXy4g==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:PgPHBkVjJL3xlydEGiWLkTApRzlg1Q3MC+06CLJ+H4SBROtr,iv:LsXXgeora//V8qTZm7GdtPaTexiDTtt1AhtnEbreBAM=,tag:qRJwjqUogUlwFJc38LZuew==,type:str]
-    SECRET_DOMAIN: ENC[AES256_GCM,data:/ig0iY6yuX0=,iv:qkGN3WYPIKo0oWzs3zV8tfs/lxRVZKf/xwRFHyhvBS4=,tag:T8X4vWuookSVDf6/zvbulA==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:OuRHQJFTc3YCklTgbH0=,iv:yEvcgQktdhhD6QVBL6eniaE1brr2Z0CamqRter2K3rs=,tag:zAR/yK/XzHwN40mbfzlClA==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:o74O4/YYt0EeyecCUIz1CDU5f53InD1HNRoJZs5YP0aj0r0s,iv:kF7isV/AaglkRID/boT0Oc+sKtv343oFjVTUzBUAMKg=,tag:bGZKQSvlCBI5+ESzcHRoSQ==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:lBETpIb0wtQ=,iv:NFYgvdlFSlNu2jBMW4I6FpaNTF+9AeohMa//5ksYtIU=,tag:pQXPyOfmClD0KQIx75W8lw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age143pqluyd0cecdvdmz6g5tqevq028syjw3asdlzukuqqm5yrvcdksacwtgg
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBiRnFyTXZMb25vRkRDbEVD
-            bVptaUE1dEFBN21jSkFZZ0VWOUNXQnFsY0VnClZ5UnZoTmRsa1VkaVMxSmFBWWN1
-            V2VZODE0dG1TaXpLTlBUb1Y3TDJHS0kKLS0tIEx5a2w2Q3NoTkw1VE5YTnYwbWhU
-            emhaYVo2dVFkYXZRTzdVdXl4dUI2cU0K6i3OwI/8mkg7Xa1Ud2c+EsET4ayfamCW
-            rh7zziZd70/VG7FHuZTY0pQVVS2iHtn7P9yRa7671PIqWZrq+13YQQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBMUkpXSFdoNWVsTVNocm5G
+            UDBiWUNjemJzOXpvbXluWlFqRE1WK2Fub21BCmFpclovcjQrQmJQRm5QWTNaRnB0
+            VFJkRjFnWElnWUhMeWN3TDZkakU2V3MKLS0tIDNqeXdmRnUzcS81Uit6a0dRQ1Vu
+            elh5RlpLS0xxWGoxcVNMeEllN25lMGMKzaBkLWgEb1RZ9soGb8gaS9k5iWJfcI9q
+            3wotJWlg+aKnq3toBpYFbSQFsZsCf2osWcsYGoKmvARc0Ivawa8M8w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-07-11T05:57:56Z"
-    mac: ENC[AES256_GCM,data:R7IhjcaMYtslNHTeW7TCatHqYmAMlkpkh/BBw6c9HdqPLxoy4R9ZUiyx88H+7be1B0pUKZp9KXI7Te5bds4YyG4QegQnaeUt+oGuS5/JN/c55W86tW5SnyXBpTENXxoNuZwKwSXFKw0//iCmFXjlpNziz1Z49VDfGQf5jvYrdHQ=,iv:diOivfxsSAUKFNeutvpT0ZYDCdq+Y9ABKEgNfM6f1u0=,tag:4+EZ8UgDNX9Cu02cDgvKtA==,type:str]
+    lastmodified: "2023-07-12T05:02:25Z"
+    mac: ENC[AES256_GCM,data:E+V/KbQ8o80ZmqhYW13WQRwNedCE3Tpqndy5vPOGtWvcf9qHPax1MbhlqhpFpy6ZoR/VohBjScsre98aAgGAMunO7My2VOjGwNcrCMDRVHgpSY/URw7WzusF3t6joO/i/Na765jm3n7vE9k4BsTrtHevexDH4nNB9MMCDFUa1UU=,iv:OaRC3SMWZ8lvaM2OllIBAb1FqbAVYiy4xXJeiQtYLkM=,tag:UJuKrRaMdoSB1lZPyr4XZQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
