--- a/ansible/inventory/host_vars/mba-node-01.sops.yaml
+++ b/ansible/inventory/host_vars/mba-node-01.sops.yaml
@@ -1,4 +1,4 @@
-ansible_become_pass: ENC[AES256_GCM,data:uSlhhAnSun0o,iv:Y2seX7DiEbXPhkXMInKsAk+ZxY1vBWIFgzrPFuk0n1Q=,tag:o1JdHhIGTjy0KktKZSIO1g==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:9Uj5lwg7rrWU,iv:5PrHKCyWU0HQtqnOpYFuwIiZUCfVTv42VG3ltJNyC/Q=,tag:+lvxmh5Z3Qo9NQT0g/u1Yw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -8,14 +8,14 @@ sops:
         - recipient: age143pqluyd0cecdvdmz6g5tqevq028syjw3asdlzukuqqm5yrvcdksacwtgg
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWTm50QWdqc1g0K3B5aThR
-            d1NRSjFuTzJ1TEdEbjR5b1ZleTdzMUMyK1JBCjZOc0gyc3RITTc2SFNxeDVNV3ZE
-            d2QvRE1YTXRyME5Oc1RaYmdOWGpSWG8KLS0tIEl6cTBrYUhQMmpuOWJVcFU5Ly9O
-            RlMzZStLczluMW5IUjYxdDVKOTBmN0kKp+U7TfiP+09/Ug6cm7oSTkX3g+abmblo
-            hSdFPKw0qTxvDqfOpo0s7nsSv/+5qNbbEELq3VQOc8vWIb3TzRVQYQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnSGc5SzA3YW0wODhLNksr
+            VHRrU2ttSGNqUVFDbUZ0b2JQYWJLV0R5MWl3CnI2ODJHN1BVQjZ5V1QyZWRDWVl5
+            MkRhcDJaanVWendqTWFhNi9reGFHeTgKLS0tIEpUdGgxTDNDQUN5MG5GbjFXMnVw
+            YlpKN2wybGhjeUNHaDBTQWt3eC9XclUKxdMBCdx0WZn5pJ54ZVSEoIv2pvN/gIHN
+            CDfAmQxwciG0daf3O2rVUTyHHg3XDyqg6fWMXWf4Ij+4YFpSIckeCg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-07-11T05:56:11Z"
-    mac: ENC[AES256_GCM,data:+CBjeNe1ok8UDqtCbsmhfH3r8sssfUAnxWrSfFIYeCTju17wY6LL3Z/vxcAa0K5ivZZS576b5FOOwa/BPKA+b/JTAFA3SNLW0JvRaBPbU+ebWN8flxJCZ/brwOG+IYcRc3qnvsJoq0QHIjXLVMANorH25dT/r8a/9BG03Uc0m2c=,iv:BSEH4e/6bH2ohqK0hh11VxmZ0fZkwRAsDYF3bXQEYbQ=,tag:oQO155mcZqrhBrzBA7bGfA==,type:str]
+    lastmodified: "2023-07-12T05:00:55Z"
+    mac: ENC[AES256_GCM,data:2veETtZkcOogBcXFSK9GRf7DdfeoMh8mQEztxofGwml5yvoiHRjkbFDCJTXbhBKu7kQPdMWCJEq5cH9D6WfbByEb92xkZFDLXq0b4M1aqNslD7zMBCByZW0UXDvGLd32HeGMFQSu2OC0YbQAapPPaP7YE0dvMfWlaD/r0NbbJG8=,iv:NeEe/U0JTSFuwMcMvlC+LdKdx4tn9+KElbXbPQFNRpw=,tag:BYYN/jxGQEnu+QQ8W1XTdA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
