--- a/kubernetes/flux/config/cluster.yaml
+++ b/kubernetes/flux/config/cluster.yaml
@@ -8,7 +8,9 @@ spec:
   interval: 30m
   ref:
     branch: main
-  url: "https://github.com/slipperypenguin/igloo.git"
+  secretRef:
+    name: github-deploy-key
+  url: "ssh://git@github.com/slipperypenguin/igloo.git"
   ignore: |
     # exclude all
     /*
