--- a/kubernetes/flux/config/cluster.yaml
+++ b/kubernetes/flux/config/cluster.yaml
@@ -10,7 +10,7 @@ spec:
     branch: main
   secretRef:
     name: github-deploy-key
-  url: "ssh://git@github.com/slipperypenguin/igloo.git"
+  url: "https://github.com/slipperypenguin/igloo.git"
   ignore: |
     # exclude all
     /*
