--- a/kubernetes/apps/networking/nginx/external/helmrelease.yaml
+++ b/kubernetes/apps/networking/nginx/external/helmrelease.yaml
@@ -80,8 +80,8 @@ spec:
           whenUnsatisfiable: DoNotSchedule
           labelSelector:
             matchLabels:
-              app.kubernetes.io/name: nginx-external
-              app.kubernetes.io/component: controller
+              app.kubernetes.io/name: ingress-nginx
+              app.kubernetes.io/instance: nginx-external
       resources:
         requests:
           cpu: 10m
