--- a/.envrc
+++ b/.envrc
@@ -1,10 +1,11 @@
 #shellcheck disable=SC2148,SC2155
 export KUBECONFIG="$(expand_path ./kubeconfig)"
 export SOPS_AGE_KEY_FILE="$(expand_path ./age.key)"
-# ansible
+# Venv
 PATH_add "$(expand_path ./.venv/bin)"
 export VIRTUAL_ENV="$(expand_path ./.venv)"
-export ANSIBLE_COLLECTIONS_PATH=$(expand_path ./.venv/galaxy)
-export ANSIBLE_ROLES_PATH=$(expand_path ./.venv/galaxy/ansible_roles)
-export ANSIBLE_VARS_ENABLED="host_group_vars,community.sops.sops"
-export K8S_AUTH_KUBECONFIG="$(expand_path ./kubeconfig)"
+export PYTHONDONTWRITEBYTECODE="1"
+# Talos
+export TALOSCONFIG="$(expand_path ./kubernetes/bootstrap/talos/clusterconfig/talosconfig)"
+# Bin
+PATH_add "$(expand_path ./.bin)"
