--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,11 @@
 .DS_Store
 *.icloud
 Thumbs.db
+.idea
 
 # k8s
 kubeconfig
+talosconfig
 
 # sops
 .decrypted~*.yaml
@@ -12,9 +14,21 @@ kubeconfig
 *.agekey
 *.pub
 *.key
+# Private
+.private
+.bin
 
 # Ansible
 .venv*
 
 # Taskfile
 .tasks
+
+# Brew
+Brewfile.lock.json
+
+# wiki
+wiki
+
+# Bootstrap
+/config.yaml
