--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
-ansible==9.0.1
-ansible-lint==6.22.0
-bcrypt==4.0.1
-jmespath==1.0.1
-netaddr==0.9.0
-openshift==0.13.2
-passlib==1.7.4
+cloudflare==2.20.0
+email-validator==2.1.1
+makejinja==2.6.0
+netaddr==1.3.0
