--- a/kubernetes/bootstrap/talos/talconfig.yaml
+++ b/kubernetes/bootstrap/talos/talconfig.yaml
@@ -23,7 +23,7 @@ cniConfig:
 nodes:
   - hostname: "mba-node-01"
     ipAddress: "192.168.20.228"
-    installDisk: "/dev/sdc"
+    installDisk: "/dev/sda"
     talosImageURL: factory.talos.dev/installer/6e810eb45767cfabcdb7a45e389eee803045af7a9467faebde5c91164861883a
     controlPlane: true
     networkInterfaces:
@@ -38,6 +38,11 @@ nodes:
         mtu: 1500
         vip:
           ip: "192.168.20.6"
+    extensionServices:
+      - name: tailscale
+        configFiles:
+        environment:
+          - $TS_AUTHKEY
 
 # Global patches
 patches:
