config: update ports

--- a/kubernetes/apps/cert-manager/cert-manager/issuers/secret.sops.yaml
+++ b/kubernetes/apps/cert-manager/cert-manager/issuers/secret.sops.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
     name: cert-manager-secret
 stringData:
-    api-token: ""
+    api-token: ENC[AES256_GCM,data:ngQMQiXB8LAjarECL0tZ9UqPOQu/ojzzZblYr9FcDrmucMuF4R81Ng==,iv:Dt/NiZLX1WGl4bBddiYiP/UJvlbuDB3Q2ZMhvFDwE9U=,tag:XgeB41Ydxf+H2M0lVYPr9w==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -13,14 +13,14 @@ sops:
         - recipient: age1w2sz2tk9h82n8g0cygzet8q6h0z2xrs4r8jjym268sudgjwpqd3shvrvzm
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBFVFZYdXJ5cTZndnNnd1RS
-            ZDhhTDNqaGZoRU5iZDVKMEtRQVA2WUNGbUEwCklZMDkyV3haZ2xlWERUbnBHMDIy
-            Z0JuT1h2QjBCeFRneitkSVk2emRHRzAKLS0tIG5VaWlBVXMvVEZOamRTeEE3RWUr
-            Y0U4ZWJ2RGNyMnlBUW04eHFGOHM4bEkK/0KxX6/dysuTvcUhiCJvNDQz525dwNGI
-            YC10Y24JNElgCkoFGhgJ3N8oSsjd/t+OOC/iYCePsKFOaB3+g7NL+A==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWdHREdkJiYlN4R3lDMmJC
+            ak1FN3JJcHNHL3JVM3NrU0RWSmt6MW85K2hNCnp3MGFtd1lBOVlCN3F0NlhYTlJH
+            dStRSzRYdGU1Ly9PZktJNDI3Y0l0TDAKLS0tIDlUYzJBN05qRnJJNnJ4NmtDK3Y0
+            OGZKWDN6NWlRRTB4dW0vUksyVkFGTG8KuD/KVRVjNSelO+aps3jlG6ZSrNpkWqbA
+            ZbdX+DcF1M5q19cNrhHMEo4ZCpLF//9zu7EWvFCxWAmmfmxbPuWHCA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-06-14T04:53:35Z"
-    mac: ENC[AES256_GCM,data:/lUj2VOzGlmyvEEKSGHXZz1FCRSvuevw8LA1QMSY8azra0cpamHh30K9E7Sf+saVfh/G5RBn40Z1FhSXioADMkcwyFRgMzzVUDLMKUbBuLlr+seG9ig1u0Lbzt+MrWMfVo0I/zL4bBEKAI5brKawvrUe7UmPwEVWDn6mWOndtec=,iv:OXNwstpQA/i7o4/Rug66H4UgKc+a4zVfxgA8vmF2fdw=,tag:ynSj7GZPlNLBZtE81jRkPA==,type:str]
+    lastmodified: "2024-06-14T05:50:10Z"
+    mac: ENC[AES256_GCM,data:cklE4auIlIGR/yOmpLNDFNeNJohxv1ASHzb/J82lJy8eMPwg+iO3KO8XTq3RqM/wSp9MDBV3c50A5qnig0STsjivP4OWIllHGo6f2RvwFQ/8L44QBaQe4G9CnLaNNV7kBy5/Zk7J893LiIrd+7N3JiiImW3RHawgf1RKyoYbv1w=,iv:nmzVwgAOnq6OppkIPmM14CnMnNHHCHesqqE2qJzaYVw=,tag:8IVG3nGe+KxXxqBeXZva4w==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
