--- a/kubernetes/apps/network/cloudflared/app/secret.sops.yaml
+++ b/kubernetes/apps/network/cloudflared/app/secret.sops.yaml
@@ -3,8 +3,8 @@ kind: Secret
 metadata:
     name: cloudflared-secret
 stringData:
-    TUNNEL_ID: ""
-    credentials.json: ENC[AES256_GCM,data:XHHOJ0W6uawoyuy5ndfZAWqFfk8N2bj96X/i5+qbvtNTMmjkNYQ2lVz60lz3XFijm6CA0/zQohQZV7N2AWxO,iv:9hMCT0UoAQyjFsXs9UDQvGlDi6WHCAjlL/6WkEAzLqg=,tag:LqYfc4ppCuyOrUfBebRHww==,type:str]
+    TUNNEL_ID: ENC[AES256_GCM,data:TFFm7xOKcyzQpStfE9fXaAlsr5qeIJWfPzYDwOEd1viO3Az2,iv:2CzzEVykB7GP0iLHrXqwqoDHBphqz0S+/x845P6FQEc=,tag:F/pjG4InIZ49ibWKM7/s+A==,type:str]
+    credentials.json: ENC[AES256_GCM,data:Hz90cI8iVRBVaVSRmfnZbLlmwLY8KWDIwALCF0hGtAGP13+ZO483WyUpUWBHe7MbNlFPufpPGJwGJuVDlKtepw0KDpC0Pz4ayTgXV4NfYEmaI4WM+P3bjt+AZ0OEkWNWtGk8V2PZVLfPJv7VlhkRJZaMBwmI3kgNw6AKeu6UeV9dGoBMMDMLP9h+MCKihzXdrwr75BRoVP2qYfSlgrrgLlhy9RvjkzHCmAoXVxazgQ==,iv:M0X7uAauGNy8azeI9e28iMtbN/+7RKy+d4w1I1DFrec=,tag:TDZDp2eNm+xERa4xtNOLhQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -14,14 +14,14 @@ sops:
         - recipient: age1w2sz2tk9h82n8g0cygzet8q6h0z2xrs4r8jjym268sudgjwpqd3shvrvzm
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBRZFcyLy9CdGIydUJhYk1J
-            MEYwR01SRzA2OTJBUzh4Q2VZZnZEOVFENW1RCnBFdFQya1RzVG9uWG5WTFExTFY2
-            Nmo3UGRlTmQzR0lDUnVpaU9mRW8rQUEKLS0tIHBBK3ZDcmhTTHZGL1ZKTjh6NE5D
-            NHYraWZ6VXc1UXp0TXNkMUZTL3d3UncKVbo7ku48JWGT9MTTjbicfU0HbbFu5Fzx
-            NHQw3kh5OFeFzR9n/qcfikaXaGNdI1/W50G2ukaljOw6CBd/wl59Hw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBqaStzUEpsdDB0OFVtQW1K
+            RVBCZFlrSElPWXNvQklhcVJKWmFaOXVEZ3lJCktER1J1bjB0MzNoTW5ia3N1SUg0
+            NDNKVzlVVWI0K0tOVWVZOXVyLzN3ZTAKLS0tIFFRR3RUaDF1Ym14K1IwWURVNXAw
+            VlNtRG5UVEsyU3BPVzNiMnZnSU16NTgKAdBlqrEga3BxJe6ddAG8f8YWcmP22GgV
+            6y5jvQIFzeD7ZLrU6EjCaQv79DxY7fkSosjvfxFbm7Ncc3nfaU3npQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-06-14T04:53:35Z"
-    mac: ENC[AES256_GCM,data:K/hTcFKFGpT1fqj08SkDdcro3IbTNLvHRTGQSKpnpg+WqqImSixX4woQwn8llvwqmy8n/SgMCigeng6sewmYJ7Xb57vz+02G5KOVuJoZmM13BnPf1+V63fhTvuxQ4D5id1HrYS0NRSnsHQ4+yMITgsQVC98dcV3sVTcVWcIt6Is=,iv:ZWBOdsxtbJgEn26DUoQTupNSfCSHE6rbrfgSdwTMXS8=,tag:nQ47NajmkGD5UcNKHRc7ig==,type:str]
+    lastmodified: "2024-06-14T05:50:10Z"
+    mac: ENC[AES256_GCM,data:BixLTAeIDdpNwZzSwXTMD8Jb76/3xn15NGU22ZA2VDQW68xmNyNa9EIN08BvcHDaSJpcLrkEGToZZkMuGNJyodGZekBgKdf+/IARad+F6bDCkWR8pr7b7pHbVnUH0UxZllmR+MBf6Ki+9NO7GnOHJaTQHrxROCqAROQHXaaeLfg=,iv:xo9KSco1vmylhjR4LVUXqHfYRBx3Q3CY0eHqQexR8AM=,tag:oibStl9nevrLuOVVieOwEg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
