--- a/kubernetes/apps/network/external-dns/app/secret.sops.yaml
+++ b/kubernetes/apps/network/external-dns/app/secret.sops.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
     name: external-dns-secret
 stringData:
-    api-token: ""
+    api-token: ENC[AES256_GCM,data:7mZvfY9ZhO+RUg9uSbx98ZOlcL2ddiSy7qhS4ZsCDrkfQc6Z6GS69A==,iv:rSjHYMy3bUOVNheFFFJDX73rgFEVBAudsAOXW9SHaRQ=,tag:YuJG08RVXJwEZ1FGZ4A2LA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -13,14 +13,14 @@ sops:
         - recipient: age1w2sz2tk9h82n8g0cygzet8q6h0z2xrs4r8jjym268sudgjwpqd3shvrvzm
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlUWU2TmlyZU5HZkM5dVZr
-            Y0NnNk1aelM5WWdlYlpRRlJ5YTJCbWVpMWxnCnlqZGkva3dlUFhzZkdQQVk4M2t0
-            V2RxSXc1bC8xQnRsNWxvSklsanp4a28KLS0tIGRLV2RpVTRGYlVzTTcycHU3VHVV
-            T0QrK25JdmN0UEQ0VlZwd3hxb3FMUWcK9yO2K7nyj965Nj0I77cPIMY/E8LGQLx5
-            9dh1JPB3v2UGDSb11Hg0fYGK13xuLR2ox4XPl+4t606Q6ihUyYHDdw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBsV0sxeXhLVnNrOUN3ZDkz
+            TUFPQWQzWkhxbzdGRjVoUWZZZmNXWG9VNkUwCnhORGJMcTlZNW90VmZBamJXTTJ1
+            aU9NR0JUMDJUbTdBS3VPTkpJSk4vbUkKLS0tIGtOaTNvazc4cHltb0d6L2hmckNX
+            QzNoUkZxOFh5OTYxOGVWUjZ4MnpQU3MKh+iimtsgvyupVNKgUWTN6+uvBkBbqr9l
+            zOvLAOYCX/WqzFVcc0T+g8ydVMhc7ss/P5UsSDXDGyjlJrzcDxHhEw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-06-14T04:53:35Z"
-    mac: ENC[AES256_GCM,data:+u6tcfyHAXP0vTY4+Aayd6nIcyqGHlnr2wmZs3mjkw/7Ctknx/IVkWlU2y+X2lLR89TLfrF2uAgJnwhDJ+fq+JcDVn7Cc7mr3oN/de3sIaZAsMHUpSVnPWPwrUFvIrskjwHxKOdZbrOttuIm25KKqBg/9V2xJdpDObiVFqVSdhg=,iv:8rpE+N1Jf0eALO1jrxEA82uN6N27fnsT1sJcpciXzWg=,tag:un21DqENxPOYYE2UhKfUeA==,type:str]
+    lastmodified: "2024-06-14T05:50:10Z"
+    mac: ENC[AES256_GCM,data:uhllm3MjnmdzGhkKrIfXZwxwrWRM9XCDM/2dU+F4wk1RtFLxvR9Ufq/VOQa1BkQA5Ex5+7UIy17dk+dcK4RXiogis3tmT3u2cGVNEQo/n0+bsQu+N6bWHa82tkkPVetzk7jBQJ7WKj8Qho9IINYFqGu2CpCXPvCcPpaYn7zVGnk=,iv:Hd6WxQkwsYrPPJlLjgyEIZ44kWGJ7LE+Ci7Sh+pQ25w=,tag:AfBwg0Sorgv+kMcfWn9sWw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
