--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,9 +4,9 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ""
-    SECRET_ACME_EMAIL: ""
-    SECRET_CLOUDFLARE_TUNNEL_ID: ""
+    SECRET_DOMAIN: ENC[AES256_GCM,data:J5Gf62JWu3g=,iv:pg5R2/yA8PRDgF2v+zg/xCwJvDqEtg7vAnwJ2UsYobI=,tag:riIYWe4xmUje7OiNYCie6Q==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:34OMtuOMXai6Qyq5Dxw=,iv:rw+a21YBHgZJ0yZsr738LaElyENGgALuaIVSDCf8FRc=,tag:x28GxO4OIFbCxVvdMHprYQ==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:ovVUjbYs1/wHYrQO7HWRvcMuX5XO78+WuQgAd/iqSl5h4z8/,iv:oEVhPAnSbpTbs0Hzic6WAYlzZ3yAPvDlVyrzpUwMqN4=,tag:ldDp5E8ZD6ZrIw5fds2ycg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age1w2sz2tk9h82n8g0cygzet8q6h0z2xrs4r8jjym268sudgjwpqd3shvrvzm
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBuTWxqNS9xbnpyeFFHYlRy
-            Wmc5b2h3U080bzk0VC9VNmtQZXcwSjgvbGlzCitVbU1nYjJmWVZUSW9Rd3hudFhZ
-            aWl2WExab1RVakhBZ1h5NkVhRllsSE0KLS0tIGhSWnFITm4zbXoyQ2dMc2hKYzN0
-            UVVBdGkxOGtLQTlXS2M2L2dUR3VtSmMKgizZe/yABtst94a5QxVHut2xdYDUTgXS
-            NMjR1TKICbXezfLsYkUnUE/T8OV4Wj9yoq+jUwVrQERJcTTzdjE9Bg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBoVmI1ZW5xUjZzT3FwNFNM
+            V3BuQkdVQm04UElPdWlpeEIvZ21FK2JRazJzCksxOEJ3VWZ5VWNYRFNPTktNVEV0
+            cVQxZWlnejk3dGFTOW9pSEtBZWpnU2cKLS0tIHZqUUd6Zkt2a1JzNUZiZmpHd2Y0
+            bUhUK1I4YUhyWkM4ekdCcG02b044U1kKUuvIiSS85gTmks2roCEqlx2PQOd1Y7Kc
+            21zX1tk+sWqWYxX+EHJiVoPZ/LUPj38v7WgX3NdSytQX3QJwlUUCOg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-06-14T04:53:35Z"
-    mac: ENC[AES256_GCM,data:3ilgcqZ8nTHiE2rxHw55r8NK1YaBpPNrnMyW4nFdcMS0UiBwbxIDxgwwtyseVwgb3kwnSfJU1Rzos16/1SuyyhgnwnDgTI1yeD+saCPV46q1M5/y8hX8DaOqShp+J7wvIakGyOf2uAvXrv8DSnvyU+5be0hxMPHIIhrx7cq/PiM=,iv:UZHjJjmup74XfnGAt2cxD0RAy8QwrwiqmBDwroSfovI=,tag:7YQqf4BHXAgPUT/ZYCGPbA==,type:str]
+    lastmodified: "2024-06-14T05:50:10Z"
+    mac: ENC[AES256_GCM,data:F5W9qOUyY76ODks0ejYBoUhXzBA85og7qaV4u5dTn3a1vjXgLifTS+0ZCLCi6dJZ322aJgd0u/5UENkZPDnqlLdKJaWAhe1CtquCPKzqL5vEq3rI+kDscHRKELj1zE6MUuTpstYEVetB6yvJtFOWeLeGwCoaQoYPibb9XtbrSaw=,iv:snGZaFaPk65TS55w5rf6x175alYpeUhqk2UssWBUifM=,tag:0LZnzHEIG5VTuozNby8FUg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
