run task configuration

--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,9 +4,9 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:J5Gf62JWu3g=,iv:pg5R2/yA8PRDgF2v+zg/xCwJvDqEtg7vAnwJ2UsYobI=,tag:riIYWe4xmUje7OiNYCie6Q==,type:str]
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:34OMtuOMXai6Qyq5Dxw=,iv:rw+a21YBHgZJ0yZsr738LaElyENGgALuaIVSDCf8FRc=,tag:x28GxO4OIFbCxVvdMHprYQ==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:ovVUjbYs1/wHYrQO7HWRvcMuX5XO78+WuQgAd/iqSl5h4z8/,iv:oEVhPAnSbpTbs0Hzic6WAYlzZ3yAPvDlVyrzpUwMqN4=,tag:ldDp5E8ZD6ZrIw5fds2ycg==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:frGR19R78Bg=,iv:uTH36NP67zPh2WAe3GcVMYwu9ynOn+kk7K4AG9LYRM0=,tag:a2hny4dtKPuJe/2k1ALSKw==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:DMiC9Mrjd2wfPHkkVpc=,iv:jDYxd8hUxUaotW6z9MT53Ht+rurW10yKU+cC8zqahTo=,tag:Sj3TJUj+kJ5JjSopuVojYQ==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:7utYyRTS34OgQZCytz7v4utei/mvsgFEh8sWwjWkU0zZsgDV,iv:MU1A2McGuBYPbDQ2/uoXgnLlrgZpQO/k4Jan6kleYtY=,tag:cHgDRkrLnbAlowK+xiKUEQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age1w2sz2tk9h82n8g0cygzet8q6h0z2xrs4r8jjym268sudgjwpqd3shvrvzm
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBoVmI1ZW5xUjZzT3FwNFNM
-            V3BuQkdVQm04UElPdWlpeEIvZ21FK2JRazJzCksxOEJ3VWZ5VWNYRFNPTktNVEV0
-            cVQxZWlnejk3dGFTOW9pSEtBZWpnU2cKLS0tIHZqUUd6Zkt2a1JzNUZiZmpHd2Y0
-            bUhUK1I4YUhyWkM4ekdCcG02b044U1kKUuvIiSS85gTmks2roCEqlx2PQOd1Y7Kc
-            21zX1tk+sWqWYxX+EHJiVoPZ/LUPj38v7WgX3NdSytQX3QJwlUUCOg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAvVkJ6clhsMWN4aUhQUExr
+            Yit3ZjNhdW1Ud0tIQ2ZQVXIyMCsxQ1VHbngwCmNScmw0VnMxYjFuenFKRm9WdFE3
+            R0RtUWpxbWZEOG9KZ2dhVVFWYVlZN3MKLS0tIDZUTUhkdVZhQVh0Smk0MWtLMXlN
+            TWhWbzM1QkNMWjJhd0gzdlQzczMwT00KuulvqEUZA4VfVdldCVDmXEnlIX4fJJKK
+            FzGD46ZYz75p6i/7WkOtY4YFwKzqN77mAVCxmeUHUZpqoSGKiZrs2w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-06-14T05:50:10Z"
-    mac: ENC[AES256_GCM,data:F5W9qOUyY76ODks0ejYBoUhXzBA85og7qaV4u5dTn3a1vjXgLifTS+0ZCLCi6dJZ322aJgd0u/5UENkZPDnqlLdKJaWAhe1CtquCPKzqL5vEq3rI+kDscHRKELj1zE6MUuTpstYEVetB6yvJtFOWeLeGwCoaQoYPibb9XtbrSaw=,iv:snGZaFaPk65TS55w5rf6x175alYpeUhqk2UssWBUifM=,tag:0LZnzHEIG5VTuozNby8FUg==,type:str]
+    lastmodified: "2024-08-07T02:16:50Z"
+    mac: ENC[AES256_GCM,data:BI/vdOdwAtavji2uI61To2R6hml//KG9+lNYxl/I9/Vb3KMpLd/ir3coatmwSDZ/nCZYTzC3dANv79Nogr7bIzNFzpR+Y5LxPdWOihk8f/xgx8Hk3rkIflR+lQCQygkcjBpQtBTre8Aq4rHVQQ5VHgyxQ2uJ6NyHqb0HIBOvFlM=,iv:5U4f/gGXYWO1hGcuyxxhl8QzTNW/K9muOKlPFEC8dro=,tag:dafTBHwBTtTSMIOe1O5ZwA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.8.1
+    version: 3.9.0
