--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,9 +4,9 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:frGR19R78Bg=,iv:uTH36NP67zPh2WAe3GcVMYwu9ynOn+kk7K4AG9LYRM0=,tag:a2hny4dtKPuJe/2k1ALSKw==,type:str]
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:DMiC9Mrjd2wfPHkkVpc=,iv:jDYxd8hUxUaotW6z9MT53Ht+rurW10yKU+cC8zqahTo=,tag:Sj3TJUj+kJ5JjSopuVojYQ==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:7utYyRTS34OgQZCytz7v4utei/mvsgFEh8sWwjWkU0zZsgDV,iv:MU1A2McGuBYPbDQ2/uoXgnLlrgZpQO/k4Jan6kleYtY=,tag:cHgDRkrLnbAlowK+xiKUEQ==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:bG/OTyyR0dU=,iv:Qff8cMP/Wu22N3PmjAOPB0ZieHz19OEbbroKSqWYz/M=,tag:cmgS7y9gEBNehQLjSuq9Ig==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:+TzTFmXyN2dXfLExi/s=,iv:RgImTu9EB7Fei93xC9x2aUnU1LkjZEIHUuPYEB7tkVY=,tag:+2PYaxHfMvYKiRljI9K9cw==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:KZRw8SIpMauefnfztd4sgZvlIlzp+jvht5WTgAcjfOGrsj2z,iv:hxvmwlHWUVhnzh5DNPDPWntQsG1l2a/aaBYH23wR8Xs=,tag:BhLcGeq5I1uQFE/pawE5oA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age1w2sz2tk9h82n8g0cygzet8q6h0z2xrs4r8jjym268sudgjwpqd3shvrvzm
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAvVkJ6clhsMWN4aUhQUExr
-            Yit3ZjNhdW1Ud0tIQ2ZQVXIyMCsxQ1VHbngwCmNScmw0VnMxYjFuenFKRm9WdFE3
-            R0RtUWpxbWZEOG9KZ2dhVVFWYVlZN3MKLS0tIDZUTUhkdVZhQVh0Smk0MWtLMXlN
-            TWhWbzM1QkNMWjJhd0gzdlQzczMwT00KuulvqEUZA4VfVdldCVDmXEnlIX4fJJKK
-            FzGD46ZYz75p6i/7WkOtY4YFwKzqN77mAVCxmeUHUZpqoSGKiZrs2w==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBwZmduZmNOYUF3bTZPTG5G
+            SUR2QlM1cVVtUWR1bUFBY2JMVGQyZitiMDBVCjQxcUxnSUYrQ2pMSnNySERBd0Ji
+            YS81THZVb2ZFVldPQjIyVGwrNWprV2MKLS0tIDN1enI3T3hCWHAzVFV3eEF6c3Fo
+            cmhzUjdNQU0rRHpFOXFsQnRvQkU1c00KsbMr4Jxc0ga/pU/EN8CLFAF38PB0rYtj
+            qh/xGYZmN/m1CPnPHPS38eikFk9H8g1AJWLh6eXSa9UixjhMrVvBog==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-08-07T02:16:50Z"
-    mac: ENC[AES256_GCM,data:BI/vdOdwAtavji2uI61To2R6hml//KG9+lNYxl/I9/Vb3KMpLd/ir3coatmwSDZ/nCZYTzC3dANv79Nogr7bIzNFzpR+Y5LxPdWOihk8f/xgx8Hk3rkIflR+lQCQygkcjBpQtBTre8Aq4rHVQQ5VHgyxQ2uJ6NyHqb0HIBOvFlM=,iv:5U4f/gGXYWO1hGcuyxxhl8QzTNW/K9muOKlPFEC8dro=,tag:dafTBHwBTtTSMIOe1O5ZwA==,type:str]
+    lastmodified: "2024-08-15T02:04:43Z"
+    mac: ENC[AES256_GCM,data:Z0nHW1/QtTlgJdrVIjgdP9KEfXVSJW5nS4jNX9yIi24OgYmMUUhjyrJt8kaXM9hQk8YD1kMIJeTUj9FZU5fpNsHiM/HQPLju+VbN9SkMBZLBrWk0P8B3DhjPT4ID9UPZfgRyIcrHfSobJchQZHhqPpqBWD7mq3Ecn7vB7u9M+6w=,iv:apX5L+Qf6OHSezksfhwc2jsOhaRkf8w23cN5ibCFuIw=,tag:NDIKspWClLb7DvWlde8dBA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.0
