--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,9 +4,9 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:bG/OTyyR0dU=,iv:Qff8cMP/Wu22N3PmjAOPB0ZieHz19OEbbroKSqWYz/M=,tag:cmgS7y9gEBNehQLjSuq9Ig==,type:str]
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:+TzTFmXyN2dXfLExi/s=,iv:RgImTu9EB7Fei93xC9x2aUnU1LkjZEIHUuPYEB7tkVY=,tag:+2PYaxHfMvYKiRljI9K9cw==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:KZRw8SIpMauefnfztd4sgZvlIlzp+jvht5WTgAcjfOGrsj2z,iv:hxvmwlHWUVhnzh5DNPDPWntQsG1l2a/aaBYH23wR8Xs=,tag:BhLcGeq5I1uQFE/pawE5oA==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:EiZctjFDCgA=,iv:oI1lcyDljqqLmyrIXLpTeIcEE89IdMHQmrgeR5y7LdA=,tag:HfmRv4wXIGaJOTm9dnPncQ==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:yinBWHubazc5RSGURuk=,iv:j7hgnSTyX1jsCKXscP6a1mWtP36qHRxXw6qCQa7LUUs=,tag:NKkCS4R+7vX+5bxGVtvwRQ==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:d8J2f9HIeDSlyvWhJ/dZY3eCV1XmtHFEd/VmsVs4wlDUIn9V,iv:+9FGEKr0OzVh2JyKR+GB8OoYJWDHl1TWgrgSoRZu++g=,tag:O8Kdx1yYwHa7EOwy4tgf3Q==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age1w2sz2tk9h82n8g0cygzet8q6h0z2xrs4r8jjym268sudgjwpqd3shvrvzm
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBwZmduZmNOYUF3bTZPTG5G
-            SUR2QlM1cVVtUWR1bUFBY2JMVGQyZitiMDBVCjQxcUxnSUYrQ2pMSnNySERBd0Ji
-            YS81THZVb2ZFVldPQjIyVGwrNWprV2MKLS0tIDN1enI3T3hCWHAzVFV3eEF6c3Fo
-            cmhzUjdNQU0rRHpFOXFsQnRvQkU1c00KsbMr4Jxc0ga/pU/EN8CLFAF38PB0rYtj
-            qh/xGYZmN/m1CPnPHPS38eikFk9H8g1AJWLh6eXSa9UixjhMrVvBog==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBBcnp2VVZrUVpGRTNvYXNP
+            Zm5vQ296UjZoYzIrZUt2UHJYNmptcUV4ZEhzCkNhRDVOdUNoRFM2dlpCQjhGdThp
+            R0IvZUNyY1dRbWhlMGRTblNPWVhWazgKLS0tIHpPVXJrMjRjeE5wV3dZVldEUVlw
+            aHhaRjBwNUVidmh1dHhpeGxRbkt2QmMKi7se+YS0pNo2W4YdyPdcy9LR6tA+nczf
+            sxY0HtxiZ3U09ME+d+JTIK5scFX7MamcZA0lstaZu2AO3p/JmLsgEA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-08-15T02:04:43Z"
-    mac: ENC[AES256_GCM,data:Z0nHW1/QtTlgJdrVIjgdP9KEfXVSJW5nS4jNX9yIi24OgYmMUUhjyrJt8kaXM9hQk8YD1kMIJeTUj9FZU5fpNsHiM/HQPLju+VbN9SkMBZLBrWk0P8B3DhjPT4ID9UPZfgRyIcrHfSobJchQZHhqPpqBWD7mq3Ecn7vB7u9M+6w=,iv:apX5L+Qf6OHSezksfhwc2jsOhaRkf8w23cN5ibCFuIw=,tag:NDIKspWClLb7DvWlde8dBA==,type:str]
+    lastmodified: "2024-08-15T06:11:20Z"
+    mac: ENC[AES256_GCM,data:CfKdiNEPVfJlj9FIcT2WZ89tTuxnIxlxU1ZT2CCxrUSJcc+eY9ZiTKKxYHjPXfn96nTLp0CJeWh/9ZFWPSt9EZ819ofiUX8n2OrBibapf+Nlot88+tnbIRXqGauoaxyA01qgoBa9lOzPmxiXd3/eCTCLeQtgEOXCM1qrP7Mc82Q=,iv:g9deepn82h4hVw6xjUf3zOX+pG+xGpgEp/XjuRhHsI0=,tag:zDv/NUQbi/ySXEPCwUBgmg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.0
